--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -21,6 +21,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GH_TOKEN }}
+          append_to_pre_release_tag: false
 
       - name: Create tag and release
         id: create_release
