--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -23,6 +23,7 @@ jobs:
           github_token: ${{ secrets.GH_TOKEN }}
 
       - name: Sanitize bumped tag
+        if: always()
         id: sanitize_tag
         uses: actions/github-script@v6
         with:
