--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -1,4 +1,3 @@
-
 name: ezMigrate Stage Environment Build-&-Deploy
 
 on:
@@ -16,42 +15,40 @@ jobs:
       pull-requests: read
     runs-on: ubuntu-latest
     steps:
-      - name: Calculate next tag
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
+          create_tag: false
+          append_to_pre_release_tag: ""
+
+      - name: Sanitize bumped tag
+        if: always()
+        id: sanitize_tag
         uses: actions/github-script@v6
-        id: versioning
         with:
           script: |
-           const semver = require('semver');
-           const tags = await github.rest.repos.listTags({
-           owner: context.repo.owner,
-           repo: context.repo.repo,
-           per_page: 1,
-           });
-           const current = tags.data[0]?.name || 'v0.0.0';
-           const next = semver.inc(current, 'patch');
-           core.info(`Current tag: ${current}`);
-           core.info(`Next tag: ${next}`);
-           core.setOutput("current", current);
-           core.setOutput("next", next);
-           
-      - name: Next Github tag version
-        run: echo "Resolved tag--> ${{ steps.versioning.outputs.next }}"     
-          
+            const rawTag = "${{ steps.tag_version.outputs.new_tag }}";
+            const cleaned = rawTag.replace(/-[^.]+?\.\d+$/, "");
+            core.info(`Raw tag: ${rawTag} → Cleaned tag: ${cleaned}`);
+            core.setOutput("clean", cleaned);      
+
       - name: Create tag and release
         id: create_release
         uses: ncipollo/release-action@v1.14.0
         with:
-          tag: ${{ steps.versioning.outputs.next }}
-          name: ${{ steps.versioning.outputs.next }}
+          tag: ${{ steps.sanitize_tag.outputs.clean }}
+          name: ${{ steps.sanitize_tag.outputs.clean }}
           prerelease: true
           generateReleaseNotes: true
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Check Output Parameters
         run: |
-          echo "Got tag name ${{ steps.versioning.outputs.next }}"
-          echo "Got release version ${{ steps.versioning.outputs.next }}"
-          echo "RELEASE_TAG in create-release-tag job: ${{ steps.versioning.outputs.next }}"
+          echo "Got tag name ${{ steps.sanitize_tag.outputs.clean }}"
+          echo "Got release version ${{ steps.sanitize_tag.outputs.clean }}"
+          echo "RELEASE_TAG in create-release-tag job: ${{ steps.sanitize_tag.outputs.clean }}"
           echo "Release upload URL: ${{ steps.create_release.outputs.upload_url }}"
           echo "Release output:"
           echo "${{ toJson(steps.create_release.outputs) }}"
@@ -61,8 +58,9 @@ jobs:
           done
 
     outputs:
-      LATEST_RELEASE_VERSION: ${{ steps.versioning.outputs.next }}
+      LATEST_RELEASE_VERSION: ${{ steps.sanitize_tag.outputs.clean }}
       UPLOAD_URL: ${{ steps.create_release.outputs.upload_url }}
+
   build:
     runs-on: ubuntu-latest
     needs: create-release-tag
@@ -106,20 +104,19 @@ jobs:
           rm -rf dist/demo-angular-app/browser
           ls -ltr dist/
           echo "Released ${{ steps.next_tag.outputs.patch }} Build - Prod" > ./dist/demo-angular-app/ReleaseVersion.txt
-          
+
       - name: Upload ezMigrate Prod Zip Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ezMigrate-prod-release-${{ steps.date.outputs.date }}
-          path: |
-            ./dist/
-            
-      - name: Archive ezMigrate UI QA Build
+          path: ./dist/
+
+      - name: Archive ezMigrate UI Prod Build
         uses: vimtor/action-zip@v1
         with:
           files: "./dist/"
           recursive: true
-          dest: "ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip"      
+          dest: "ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip"
 
       - name: Build Angular Integration web app for QA 
         run: |
@@ -131,38 +128,36 @@ jobs:
           rm -rf dist/demo-angular-app/browser
           ls -ltr dist/
           echo "Released ${{ steps.next_tag.outputs.patch }} Build - QA" > ./dist/demo-angular-app/ReleaseVersion.txt
-          
+
       - name: Upload ezMigrate QA Zip Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ezMigrate-qa-release-${{ steps.date.outputs.date }}
-          path: |
-            ./dist/
-            
+          path: ./dist/
+
       - name: Archive ezMigrate UI QA Build
         uses: vimtor/action-zip@v1
         with:
           files: "./dist/"
           recursive: true
-          dest: "ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip"     
-            
-       # Upload Release Asset
+          dest: "ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip"
+
       - name: Upload Prod ZIP Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-         upload_url: ${{ needs.create-release-tag.outputs.UPLOAD_URL }}
-         asset_path: ./ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip
-         asset_name: ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip
-         asset_content_type: application/zip
-         
+          upload_url: ${{ needs.create-release-tag.outputs.UPLOAD_URL }}
+          asset_path: ./ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip
+          asset_name: ezMigrate-prod-release-${{ steps.date.outputs.date }}.zip
+          asset_content_type: application/zip
+
       - name: Upload QA ZIP Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-         upload_url: ${{ needs.create-release-tag.outputs.UPLOAD_URL }}
-         asset_path: ./ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip
-         asset_name: ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip
-         asset_content_type: application/zip
+          upload_url: ${{ needs.create-release-tag.outputs.UPLOAD_URL }}
+          asset_path: ./ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip
+          asset_name: ezMigrate-qa-release-${{ steps.date.outputs.date }}.zip
+          asset_content_type: application/zip
