--- a/.github/workflows/Demo2.yml
+++ b/.github/workflows/Demo2.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           append_to_pre_release_tag: ""
+          dry_run: true
 
       - name: Sanitize bumped tag
         if: always()
