--- a/.github/workflows/ezMigrate-Prod-Deploy.yml
+++ b/.github/workflows/ezMigrate-Prod-Deploy.yml
@@ -7,6 +7,14 @@ on:
     paths-ignore:
       - ".github/**"
   pull_request:
+  release:
+       description: "Do you want to create a release?"
+       required: true
+       default: "No"
+       type: choice
+       options:
+         - "Yes"
+         - "No"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
