--- a/.github/workflows/ezMigrate-Prod-Deploy.yml
+++ b/.github/workflows/ezMigrate-Prod-Deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Code Sign CUCM Executable
+name: Build and Code Sign BWExecutable
 
 on:
   workflow_dispatch:
@@ -12,9 +12,13 @@ on:
           - "Yes"
           - "No"
   push:
-    branches: [main]
-    paths-ignore:
-      - ".github/**"  
+    branches:
+      - main
+      - dev
+      - bw-extractor
+      - EM-356
+    tags: ["*v[0-9]+.[0-9]+.[0-9]+*"]
+
   pull_request:
 
 concurrency:
@@ -22,36 +26,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_codesign:
-    runs-on: windows-latest
+  build:
+    runs-on: [windows-latest]
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - name: Set up Python Environment
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10.9"
+          python-version: "3.13.1"
 
-      - name: Install Python Dependencies
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install requests>=2.31.0 lxml>=4.9.0 typing-extensions>=4.0.0 pyinstaller>=5.13.0
+          pip install --upgrade pip
+          pip install pyinstaller
+          pip install ttkbootstrap
+          pip install requests
+          pip install lxml
+          pip install xmltodict
+          pip install validators
 
-      - name: Verify Assets Directory
+      - name: Build executable
         run: |
-          if (!(Test-Path "assets")) {
-            New-Item -ItemType Directory -Path "assets"
-          }
-          if (!(Test-Path "assets/tekVIcon.ico")) {
-            Write-Error "Icon file not found in assets directory"
-            exit 1
-          }
-
-      - name: Build CUCM Executable file
-        run: |
-          python -m PyInstaller cucm_extractor.spec --clean --noconfirm
+          pyinstaller --onefile app/main.py --distpath dist --workpath build --add-data="assets/info-small.png:assets" --add-data="assets/tekVIcon.png:assets" --collect-all ttkbootstrap --collect-all requests --collect-all lxml --collect-all xmltodict --collect-all validators --name BWExtractor
 
       - name: Install .NET Core SDK
         uses: actions/setup-dotnet@v1
@@ -79,27 +76,28 @@ jobs:
             -kvi "$env:AZURE_KEY_VAULT_CLIENT_ID" `
             -kvs "$env:AZURE_KEY_VAULT_CLIENT_SECRET" `
             -tr "$env:GLOBALSIGN_TIMESTAMP_SERVER" `
-            -td sha256 dist/CUCM_Extractor.exe `
+            -td sha256 dist/BWExtractor.exe `
             --verbose
-            
-      - name: Upload Code-Signed Executable
+
+
+      - name: Upload Extractor to Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: CUCMExtractor
-          path: dist/CUCM_Extractor.exe
-      
+          name: BWExtractor
+          path: dist/*.exe
+
       - name: Install Azure CLI on Windows
         if: ${{ github.event.inputs.upload_extractor == 'Yes' }}
         run: |
           Invoke-WebRequest -Uri https://aka.ms/installazurecliwindows -OutFile .\AzureCLI.msi
           Start-Process msiexec.exe -ArgumentList '/I AzureCLI.msi /quiet' -NoNewWindow -Wait
-          Remove-Item .\AzureCLI.msi   
+          Remove-Item .\AzureCLI.msi
       
-      - name: Archive Extractor Build
+      - name: Archive Extractor Build to Zip
         if: ${{ github.event.inputs.upload_extractor == 'Yes' }}
         uses: vimtor/action-zip@v1
         with:
-          files: dist/CUCM_Extractor.exe
+          files: dist/BWExtractor.exe
           dest: dist/EzMigrateExtractor.zip
           
       - name: Generate - Build Metadata JSON
@@ -117,14 +115,14 @@ jobs:
             "artifact_size_mb": "'"$(du -m dist/EzMigrateExtractor.zip | cut -f1)"'",
             "actor": "${{ github.actor }}",
             "workflow_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          }' > dist/build_metadata.json
+          }' > dist/build_metadata.json	  
           
       - name: Upload Extractor Zip to Azure Blob Storage
         if: ${{ github.event.inputs.upload_extractor == 'Yes' }}
         env:
-          AZURE_STORAGE_BLOB_CLIENT_ID: ${{ secrets.AZURE_STORAGE_BLOB_CLIENT_ID }}
-          AZURE_STORAGE_BLOB_CLIENT_SECRET: ${{ secrets.AZURE_STORAGE_BLOB_CLIENT_SECRET }}
-          AZURE_STORAGE_BLOB_TENANT_ID: ${{ secrets.AZURE_STORAGE_BLOB_TENANT_ID }}
+          AZURE_STORAGE_BLOB_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_STORAGE_BLOB_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          AZURE_STORAGE_BLOB_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           ACCOUNT_NAME: ezmigratedemo
           CONTAINER_NAME: extraction-tools
           SOURCE_BLOB: EzMigrateExtractor.zip
@@ -132,6 +130,9 @@ jobs:
           
         run: |
           az login --allow-no-subscriptions --service-principal -u "$env:AZURE_STORAGE_BLOB_CLIENT_ID" -p "$env:AZURE_STORAGE_BLOB_CLIENT_SECRET" --tenant "$env:AZURE_STORAGE_BLOB_TENANT_ID"
-          az storage blob copy start --auth-mode login --account-name "$env:ACCOUNT_NAME" --destination-container "$env:CONTAINER_NAME" --destination-blob "DEV/cucm/$env:DEST_BLOB" --source-account-name "$env:ACCOUNT_NAME" --source-container "$env:CONTAINER_NAME" --source-blob "DEV/cucm/$env:SOURCE_BLOB"
-          az storage blob upload --auth-mode login --account-name "$env:ACCOUNT_NAME" --container-name "$env:CONTAINER_NAME" --name "DEV/cucm/$env:SOURCE_BLOB" --file dist/$env:SOURCE_BLOB --overwrite true
-          az storage blob upload --auth-mode login --account-name "$env:ACCOUNT_NAME" --container-name "$env:CONTAINER_NAME" --name "DEV/cucm/build_metadata.json" --file dist/build_metadata.json --overwrite true
+          az storage blob copy start --auth-mode login --account-name "$env:ACCOUNT_NAME" --destination-container "$env:CONTAINER_NAME" --destination-blob "DEV/broadworks/$env:DEST_BLOB" --source-account-name "$env:ACCOUNT_NAME" --source-container "$env:CONTAINER_NAME" --source-blob "DEV/broadworks/$env:SOURCE_BLOB"
+          az storage blob upload --auth-mode login --account-name "$env:ACCOUNT_NAME" --container-name "$env:CONTAINER_NAME" --name "DEV/broadworks/$env:SOURCE_BLOB" --file dist/$env:SOURCE_BLOB --overwrite true
+		  az storage blob upload --auth-mode login --account-name "$env:ACCOUNT_NAME" --container-name "$env:CONTAINER_NAME" --name "DEV/broadworks/build_metadata.json" --file dist/build_metadata.json --overwrite true
+		  
+		  
+		  
