--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
-          prerelease: true
+          prerelease: false
           generateReleaseNotes: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
