--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -55,3 +55,33 @@ jobs:
     outputs:
       LATEST_RELEASE_VERSION: ${{ steps.sanitize_tag.outputs.clean }}
       UPLOAD_URL: ${{ steps.create_release.outputs.upload_url }}
+  
+  build:
+    runs-on: ubuntu-latest
+    needs: create-release-tag
+    steps:
+      - name: Checkout (all tags)
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get latest tag
+        id: get_latest_tag
+        run: |
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          echo "Latest tag: $LATEST_TAG"
+          if [[ $LATEST_TAG =~ ^v([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
+            MAJOR=${BASH_REMATCH[1]}; MINOR=${BASH_REMATCH[2]}; PATCH=${BASH_REMATCH[3]}
+          else
+            echo "Tag format not recognized: $LATEST_TAG"
+            exit 1
+          fi
+          NEW_RELEASE_TAG="v${MAJOR}.${MINOR}.$((PATCH + 1))"
+          NEW_MAJOR_TAG="v$((MAJOR + 1)).0.0"
+          echo "new_release_tag=$NEW_RELEASE_TAG" >> $GITHUB_OUTPUT
+          echo "new_major_tag=$NEW_MAJOR_TAG" >> $GITHUB_OUTPUT
+          echo "current_major=$MAJOR" >> $GITHUB_OUTPUT
+          echo "new_release_tag --> $NEW_RELEASE_TAG"
+          echo "new_major_tag ---> $NEW_MAJOR_TAG"
+          echo "current_major ---> $MAJOR"
