--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -77,9 +77,19 @@ jobs:
             echo "Tag format not recognized: $LATEST_TAG"
             exit 1
           fi
-          #NEW_RELEASE_TAG="v${MAJOR}.${MINOR}.$((PATCH + 1))"
-          NEW_MAJOR_TAG="v$((MAJOR + 1)).0.0"
-          echo "current_major=$MAJOR" >> $GITHUB_OUTPUT
-          echo "new_major_tag=$NEW_MAJOR_TAG" >> $GITHUB_OUTPUT
-          echo "new_major_tag ---> $NEW_MAJOR_TAG"
           
+          NEW_MAJOR_TAG="v$((MAJOR + 1)).0.0"
+
+          echo "new_major_tag=$NEW_MAJOR_TAG" >> $GITHUB_OUTPUT
+          echo "current_major=$MAJOR" >> $GITHUB_OUTPUT
+          echo "current_major ---> $MAJOR"
+          echo "new_major_tag ---> $NEW_MAJOR_TAG"
+
+      - name: Get short commit hash
+        id: git_short_hash
+        run: echo "hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Create Tag
+        id: create_tag
+        run: |
+          echo "Found the hash ---> ${{ steps.git_short_hash.outputs.hash }}"
