--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -85,11 +85,15 @@ jobs:
           echo "current_major ---> $MAJOR"
           echo "new_major_tag ---> $NEW_MAJOR_TAG"
 
-      - name: Get short commit hash
-        id: git_short_hash
-        run: echo "hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-      - name: Create Tag
-        id: create_tag
-        run: |
-          echo "Found the hash ---> ${{ steps.git_short_hash.outputs.hash }}"
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        with:
+          tag_name: v${{ steps.get_latest_tag.outputs.new_major_tag }}
+          release_name: Release v${{ steps.get_latest_tag.outputs.new_major_tag }}
+          body: |
+            Release created automatically by GitHub Actions.
+          draft: false
+          prerelease: false
