--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -99,4 +99,4 @@ jobs:
           body: |
             Release created automatically by GitHub Actions.
           draft: false
-          prerelease: false
+          prerelease: true
