--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -123,7 +123,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.get_latest_tag.outputs.new_major_tag }}
-          release_name: Release ${{ steps.get_latest_tag.outputs.new_major_tag }}
+          release_name: ${{ steps.get_latest_tag.outputs.new_major_tag }}
           body: |
             Release created automatically by GitHub Actions.
           draft: false
